--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@ function sine() {
 
 var num = document.getElementById("n1");
 
-num.value = Math.sin(num.value, 3);
+num.value = Math.sin(num.value);
 
 function cuarta() {
 
